# rebuild-web-sender-music-player

./: .gitignore  Cargo.toml  README.md
ctrl/client/client-play/: Cargo.toml
ctrl/client/client-play/src/: lib.rs
ctrl/client/read-conf/: Cargo.toml
ctrl/client/read-conf/src/: lib.rs
ctrl/server/handle-conf/: Cargo.toml
ctrl/server/prepare-send/: Cargo.toml
io/client/show-conf/: Cargo.toml
io/client/show-conf/src/: lib.rs
io/server/show-server-close/: Cargo.toml
io/server/show-server-conf/: Cargo.toml
io/server/show-server-prepare-send/: Cargo.toml
io/server/show-server-read-file/: Cargo.toml
io/server/show-server-work/: Cargo.toml
lib/conf/: Cargo.toml
lib/conf/src/: lib.rs
lib/play/: Cargo.toml
lib/send/: Cargo.toml
lib/utils/: Cargo.toml
lib/utils/src/: lib.rs
